Closed
Bug 1618712
Opened 6 years ago
Closed 6 years ago
aria heading level is not announced in VoiceOver
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | verified |
People
(Reporter: eeejay, Assigned: eeejay)
Details
(Whiteboard: [mac2020_1])
Attachments
(2 files)
STR:
- Load
data:text/html,<h1>native heading</h1><div role="heading" aria-level="1">aria heading</div> - Arrow between the two headings
Expected:
Both should be announced as heading level 1
Actual:
The aria heading is only announced as a "heading".
Comment 1•6 years ago
|
||
Mac calls Accessible::GetLevelInternal(). That method is called internal for a reason. :) It needs to use Accessible::GroupPosition() instead.
Comment 2•6 years ago
|
||
As an interesting sidenote, why is an "Internal" method marked public? 😱
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → eitan
| Assignee | ||
Comment 3•6 years ago
|
||
We were using the wrong Accessible method to get the level. We also need to swap IPDL methods to use the right one.
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/53583c05b276
Use GroupPosition for heading levels in mac. r=morgan,nika
| Assignee | ||
Comment 5•6 years ago
|
||
Pushed by dvarga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bfc6fcb63e2b
Unsupport e10s xpcAccessible::GroupPosition in Windows. a=fix
| Assignee | ||
Updated•6 years ago
|
Priority: P2 → P1
Comment 7•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/53583c05b276
https://hg.mozilla.org/mozilla-central/rev/bfc6fcb63e2b
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•5 years ago
|
Flags: qe-verify+
Comment 8•5 years ago
|
||
Reproduced the initial issue using an old Nightly (2020-02-27), verified that both headers are announced as "heading level 1" using latest Firefox 76.0b4 on macOS 10.15.4.
You need to log in
before you can comment on or make changes to this bug.
Description
•