Bug 1618712 - Use GroupPosition for heading levels in mac. r=morgan,nika

We were using the wrong Accessible method to get the level. We also need to swap IPDL methods to use the right one.

Differential Revision: https://phabricator.services.mozilla.com/D65645