accessible/ipc/ProxyAccessibleShared.h
@@ -65,7 +65,7 @@ nsAtom* LandmarkRole() const;
 
 nsStaticAtom* ARIARoleAtom() const;
 
-int32_t GetLevelInternal();
+mozilla::a11y::GroupPos GroupPosition();
 void ScrollTo(uint32_t aScrollType);
 void ScrollToPoint(uint32_t aScrollType, int32_t aX, int32_t aY);
 
