accessible/ipc/other/DocAccessibleChild.h
@@ -84,8 +84,9 @@ class DocAccessibleChild : public DocAccessibleChildBase {
   virtual mozilla::ipc::IPCResult RecvARIARoleAtom(const uint64_t& aID,
                                                    nsString* aRole) override;
 
-  virtual mozilla::ipc::IPCResult RecvGetLevelInternal(
-      const uint64_t& aID, int32_t* aLevel) override;
+  virtual mozilla::ipc::IPCResult RecvGroupPosition(
+      const uint64_t& aID, int32_t* aLevel, int32_t* aSimilarItemsInGroup,
+      int32_t* aPositionInGroup) override;
 
   virtual mozilla::ipc::IPCResult RecvAttributes(
       const uint64_t& aID, nsTArray<Attribute>* aAttributes) override;
